# AppImageCreator

./: .gitignore  Cargo.toml  README.md
src/: appimage.rs  main.rs
